tests/snapshots/examples_fixtures/type_system__failing__06_runtime_float_string_return.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/06_runtime_float_string_return.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Return Type Mismatch

The body of `compute_rate` does not match its declared return type.

  examples/type_system/failing/06_runtime_float_string_return.flx:28:5
   |
27 | fn compute_rate() -> Float {
   |                      ----- `compute_rate` was declared to return `Float`
28 |     "slow"
   |     ^^^^^^
   |     ------ this expression has type `String`

Note:
  declared return type: Float
  body type: String

Help:
  Return a `Float` value from `compute_rate` or change its annotation.
== stdout ==
<not executed>
